Members module - part 1

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ wp-content/uploads/
 # Ignore WordPress plugins except for custom plugins
 wp-content/plugins/*
 !wp-content/plugins/events/
+!wp-content/plugins/members/
 
 # Ignore WordPress themes except for custom themes
 wp-content/themes/*
